# sprints-EDF-scheduler

./: .gitignore  CMakeLists.txt  README.md
Documents/: EDF scheduler.xlsx  sismo_simulation.xml
FreeRTOS/Source/: tasks.c
FreeRTOS/Source/include/: task.h
Keil_Project/: FreeRTOSConfig.h  RTOSDemo.uvopt  RTOSDemo.uvproj  portasm.lst  serialisr.lst  startup.lst
Keil_Project/lib/: std.h
Keil_Project/src/: GPIO_cfg.c  main.c  serial.c
